# openglearn

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
data/configs/: default.json
data/launch/: default.json
data/models/: cube.gltf
data/scenes/: test_scene.json
data/shaders/: light.vert  phong.frag  phong.vert  test.frag  test.vert
lib/: tiny_gltf.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: imgui_impl_opengl3.h
src/: app.cpp  app.h  app.hpp  camera.cpp  camera.h  camera.hpp  component.h  file.h  filesystem_disk.h  fileutil.h  freelist.h  glapp.cpp  glapp.hpp  gltf_loader.cpp  gltf_loader.hpp  index_buffer.cpp  index_buffer.h  log.cpp  log.h  main.cpp  material.h  material.hpp  mesh.cpp  mesh.h  mesh.h.orig  mesh.hpp  model.cpp  model.h  obj_importer.cpp  obj_importer.h  obj_importer.hpp  obj_parser.h  ogl.h  openglearn.cpp  position_component.h  renderer.cpp  renderer.h  renderer.hpp  scene.h  scene.hpp  (+26 more)
src/shaders/: testShader.frag  testShader.vert
